added company add

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,8 @@
 
     <!-- Main content -->
      {%include "partials/main_content.html" %}
+      {% block main %}
+      {% endblock %}
     <!-- /.content -->
   </div>
   <!-- /.content-wrapper -->
