--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -29,25 +29,31 @@
             <ul class="nav nav-treeview">
 
               <li class="nav-item">
-                <a href="../examples/profile.html" class="nav-link">
+                <a href="{% url "list_company" %}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Profile</p>
+                  <p>ŞİRKETLER</p>
                 </a>
               </li>
 
               <li class="nav-item">
-                <a href="../examples/projects.html" class="nav-link active">
+                <a href="{% url "add_company" %}" class="nav-link active">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Projects</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="../examples/project-add.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Project Add</p>
+                  <p>ŞİRKET EKLE</p>
                 </a>
               </li>
 
+              <li class="nav-item">
+                <a href="{% url "list_person" %}" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>KULLANICILAR</p>
+                </a>
+              </li>
+                  <li class="nav-item">
+                <a href="{% url "add_person" %}" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>KULLANICI EKLE</p>
+                </a>
+              </li>
             </ul>
           </li>
 
