added company update and detail

--- a/templates/directory/list_company.html
+++ b/templates/directory/list_company.html
@@ -88,13 +88,13 @@
                           <span class="badge badge-success">Success</span>
                       </td>
                       <td class="project-actions text-right">
-                          <a class="btn btn-primary btn-sm" href="#">
+                          <a class="btn btn-primary btn-sm"  href="{% url 'company_detail' company.id %}">
                               <i class="fas fa-folder">
                               </i>
                               View
                           </a>
-                          <a class="btn btn-info btn-sm" href="#">
-                              <i class="fas fa-pencil-alt">
+                          <a class="btn btn-info btn-sm" href="{% url 'company_update' company.id %}">
+                              <i class="fas fa-pencil-alt"  >
                               </i>
                               Edit
                           </a>
