--- a/templates/directory/add_person.html
+++ b/templates/directory/add_person.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load crispy_forms_tags %}
 {% block main %}
  <div class="row">
         <div class="col-md-6">
@@ -14,31 +14,16 @@
               </div>
             </div>
             <div class="card-body">
-              <div class="form-group">
+                <form action="#" method="POST" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {{ form|crispy  }}
+                    <div class="form-group">
                 <label for="inputName">Project Name</label>
                 <input type="text" id="inputName" class="form-control">
               </div>
-              <div class="form-group">
-                <label for="inputDescription">Project Description</label>
-                <textarea id="inputDescription" class="form-control" rows="4"></textarea>
-              </div>
-              <div class="form-group">
-                <label for="inputStatus">Status</label>
-                <select id="inputStatus" class="form-control custom-select">
-                  <option selected disabled>Select one</option>
-                  <option>On Hold</option>
-                  <option>Canceled</option>
-                  <option>Success</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <label for="inputClientCompany">Client Company</label>
-                <input type="text" id="inputClientCompany" class="form-control">
-              </div>
-              <div class="form-group">
-                <label for="inputProjectLeader">Project Leader</label>
-                <input type="text" id="inputProjectLeader" class="form-control">
-              </div>
+            <button type="submit" class="button">Kaydet</button>
+                </form>
+
             </div>
             <!-- /.card-body -->
           </div>
@@ -47,3 +32,24 @@
 
       </div>
 {% endblock %}
+{#    <div class="form-group">#}
+{#                <label for="inputDescription">Project Description</label>#}
+{#                <textarea id="inputDescription" class="form-control" rows="4"></textarea>#}
+{#              </div>#}
+{#              <div class="form-group">#}
+{#                <label for="inputStatus">Status</label>#}
+{#                <select id="inputStatus" class="form-control custom-select">#}
+{#                  <option selected disabled>Select one</option>#}
+{#                  <option>On Hold</option>#}
+{#                  <option>Canceled</option>#}
+{#                  <option>Success</option>#}
+{#                </select>#}
+{#              </div>#}
+{#              <div class="form-group">#}
+{#                <label for="inputClientCompany">Client Company</label>#}
+{#                <input type="text" id="inputClientCompany" class="form-control">#}
+{#              </div>#}
+{#              <div class="form-group">#}
+{#                <label for="inputProjectLeader">Project Leader</label>#}
+{#                <input type="text" id="inputProjectLeader" class="form-control">#}
+{#              </div>#}
