--- a/templates/directory/list_person.html
+++ b/templates/directory/list_person.html
@@ -3,43 +3,8 @@
 
 {% block main %}
     <div class="card">
-    <div class="modal"  tabindex="-1" role="dialog">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">Modal title</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <p>Modal body text goes here.</p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" id="delete-botton" class="btn btn-primary">Save changes</button>
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          </div>
-        </div>
-      </div>
-        <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      ...
-    </div>
-  </div>
-</div>
 
-<!-- Small modal -->
-<button type="button" data-remodal-id="alert" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-sm">Small modal</button>
 
-<div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-sm">
-    <div class="modal-content">
-      ...
-    </div>
-  </div>
-</div>
-    </div>
         <div class="card-header">
           <h3 class="card-title">Projects</h3>
 
@@ -60,14 +25,14 @@
                           #
                       </th>
                       <th style="width: 20%">
-                         Şirket Adı
+                         Kişi Adı
                       </th>
                       <th style="width: 30%">
-                          Şirket Fotoğrafı
+                          Kişi Fotoğrafı
 
                       </th>
                       <th>
-                            Şirket Açıklaması
+                            Kişi Açıklaması
                       </th>
                       <th style="width: 8%" class="text-center">
                           Status
@@ -77,14 +42,14 @@
                   </tr>
               </thead>
               <tbody>
-              {% for company in persons %}
+              {% for person in persons %}
                   <tr>
                       <td>
                           #
                       </td>
                       <td>
                           <a>
-                              {{ company.name }}
+                              {{ person.name }}
                           </a>
 
                       </td>
@@ -93,7 +58,7 @@
                           <ul class="list-inline">
                               <li class="list-inline-item">
                                    {% if company.image %}
-                                  <img alt="Avatar" class="img-circle elevation-2" style="width: 100px; height: 100px" src="{{ company.image.url }}">
+                                  <img alt="Avatar" class="img-circle elevation-2" style="width: 100px; height: 100px" src="{{ person.image.url }}">
                                   {% endif %}
                               </li>
 
@@ -101,23 +66,23 @@
                           </ul>
                       </td>
                       <td class="project_progress">
-                         {{ company.company_description }}
+                         {{ person.description }}
                       </td>
                       <td class="project-state">
-                          <span class="badge badge-success">Success</span>
+                          <span class="badge badge-success">{{ person.company.names }}</span>
                       </td>
                       <td class="project-actions text-right">
-                          <a class="btn btn-primary btn-sm"  href="{% url 'company_detail' company.id %}">
+                          <a class="btn btn-primary btn-sm"  href="">
                               <i class="fas fa-folder">
                               </i>
                               View
                           </a>
-                          <a class="btn btn-info btn-sm" href="{% url 'company_update' company.id %}">
+                          <a class="btn btn-info btn-sm" href="">
                               <i class="fas fa-pencil-alt"  >
                               </i>
                               Edit
                           </a>
-                          <a class="btn btn-danger btn-sm" data-url_root="{% url 'company_delete' company.id %}" onclick="deleteBtn({{ company.id }})" id="delete" href="#" data-toggle="modal"data-target=".modal" >
+                          <a class="btn btn-danger btn-sm"  onclick="deleteBtn('{{ person }}')" id="delete" href="#" >
                               <i class="fas fa-trash">
                               </i>
                               Delete
@@ -130,34 +95,34 @@
         </div>
         <!-- /.card-body -->
       </div>
-    <script>
-    var deleteBtn = function (companyId){
-        var commitBtn = document.querySelector('#delete-botton')
-         var url = $("#delete").attr("data-url_root");
-         console.log("url", url)
+      <script>
+        var deleteBtn = function (person){
 
-        commitBtn.addEventListener('click', function (){
-            var url = $("#delete").attr("data-url_root");
-
-           console.log("tıklandı", companyId)
-             $.ajax({
-             url: url,
-             method: 'DELETE',
-
-            success: function(response) {
-                $(location).attr('href', '#alert');
-                console.log('Kitap silindi.');
-                location.reload();
-            },
-            error: function(error) {
-                console.log('Bir hata oluştu:', error);
-            }
-        });
-
-        })
-
-    }
-
+            Swal.fire({
+              title: 'Kişi Silinsin mi?',
+              text: person + " Bu Kişiyi Silme İstediğinizden Emin misiniz ?",
+              icon: 'warning',
+              showCancelButton: true,
+              confirmButtonColor: '#3085d6',
+              cancelButtonColor: '#d33',
+              confirmButtonText: 'Yes, delete it!'
+            }).then((result) => {
+              if (result.isConfirmed) {
+                  $.ajax({
+                      method: "DELETE",
+                      url: 
+                  })
+                Swal.fire(
+                  'Deleted!',
+                  'Your file has been deleted.',
+                  'success'
+                )
+              }
+            })
+        }
 
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
 {% endblock %}
